Add Google Search Console verification meta tag

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ AI role:       Implementation, optimization
     <meta name="author" content="PAISS - Martijn">
     <title>PAISS - Ship Solutions in Days, Not Months</title>
 
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="8tE0bYDZ7bVxLvtQ8xbtjNtLKnwgBAN9cXBQtP5e_VU" />
+
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 
